--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.16.13",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4"
   }
 }
